# python-training

./: requirements.txt
lab_06/: pyproject.toml
my_project/: pyproject.toml
project_poetry/: pyproject.toml
python/: README.md  ex02.py  ex03.py  ex0_1.py  exam.md
python/day_01/: README.md
python/day_01/examples/: conditional.md  data_structures.md  loops.md  operators.md  script.py  simple_script.py  venv.md
python/day_01/lab_01/: lab_01.md
python/day_01/lab_02/: README.md  main.py  pyproject.toml
python/day_01/lab_03/: README.md  more.md  print.ipynb  pyproject.toml
python/day_01/lab_04/: lab_04.md
python/day_02/: README.md  random.py
python/day_02/examples/: classes.md  functions.md  modules.md  project.md  script.py
python/day_02/fruit_basket/: pyproject.toml
python/day_02/lab_05/: lab_05.md
python/day_02/lab_06/: ex06.py  lab_06.md
python/day_03/: README.md
python/day_03/examples/: virtual_environments.md
python/day_03/lab_07/: lab_07.md
python/day_03/lab_09/lab_simple_cli/: Dockerfile  README.md  pyproject.toml
python/day_03/lab_09/lab_simple_cli/src/: commands.py
python/day_03/lab_10/lab_simple_api/: Dockerfile  main.py  pyproject.toml
python/day_04/: README.md
python/day_05/: README.md
python/day_06/: README.md
python/day_07/: README.md
python/day_08/: README.md
python/day_08/lab_24/django_project/: pyproject.toml
python/day_08/lab_24/django_project/mysite/: db.sqlite3
python/day_09/: README.md
python/day_10/: README.md
python/day_11/: README.md
python/day_12/: README.md
python/day_13/: README.md
taskManager/: db.sqlite3
taskManager/taskmanager/: settings.py  urls.py
taskManager/tasks/: admin.py  forms.py  models.py  urls.py  views.py
(+215 files in other folders)
