[tool.poetry]
name = "lab-simple-cli"
version = "0.1.0"
description = ""
authors = ["erica <ericamlmsoares@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "./src" }
]
[tool.poetry.scripts]
hello = "src.commands:hello"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
