[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Érica Lopes <ericamlopes21@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
